Rework tests to use junit.jupiter
Replace all testng and plain junit with junit.jupiter throughout the
entire lighty.io project.

JIRA: LIGHTY-409
Signed-off-by: tobias.pobocik <tobias.pobocik@pantheon.tech>