@@ -7,21 +7,27 @@
  */
 package io.lighty.core.common.models.tests;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import io.lighty.core.common.models.ModuleId;
 import io.lighty.core.common.models.YangModuleUtils;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Stream;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.opendaylight.yangtools.binding.meta.YangModuleInfo;
 import org.opendaylight.yangtools.yang.common.QName;
-import org.testng.Assert;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
 
-public class YangModelUtilsTests {
+class YangModelUtilsTests {
 
     private static final String TEST_NAMESPACE = "urn:ietf:params:xml:ns:yang:ietf-inet-types";
     private static final String TEST_NAME = "ietf-inet-types";
@@ -35,95 +41,86 @@ public class YangModelUtilsTests {
                 .YangModuleInfoImpl.getInstance()
     );
 
-    @DataProvider(name = "equalsTestData")
-    public static Object[][] gatEqualsTestData() {
+    static Stream<Arguments> equalsTestData() {
         ModuleId moduleIdx = new ModuleId("Test","namespace","modulex", "2018-04-23");
         ModuleId moduleIdy = new ModuleId("Test", "namespace","modulex", "2018-04-23");
         ModuleId moduleIdz = new ModuleId("namespace","modulex", "2018-04-23");
         ModuleId moduleIdw = new ModuleId("namespace","modulew", "2018-04-23");
-        return new Object[][] {
+        return Stream.of(
                 //reflexive
-                {moduleIdx, moduleIdx, true},
-
+                Arguments.of(moduleIdx, moduleIdx, true),
                 //symmetric
-                {moduleIdx, moduleIdy, true},
-                {moduleIdy, moduleIdx, true},
-
+                Arguments.of(moduleIdx, moduleIdy, true),
+                Arguments.of(moduleIdy, moduleIdx, true),
                 //transitive
-                {moduleIdx, moduleIdy, true},
-                {moduleIdy, moduleIdz, true},
-                {moduleIdx, moduleIdz, true},
-
+                Arguments.of(moduleIdx, moduleIdy, true),
+                Arguments.of(moduleIdy, moduleIdz, true),
+                Arguments.of(moduleIdx, moduleIdz, true),
                 //consistent
-                {moduleIdx, moduleIdx, true},
-                {moduleIdx, moduleIdx, true},
-                {moduleIdx, moduleIdw, false},
-                {moduleIdx, moduleIdw, false},
-                {moduleIdx, "data", false},
-                {moduleIdx, "data", false},
-                {moduleIdx, null, false},
-                {moduleIdx, null, false},
-        };
+                Arguments.of(moduleIdx, moduleIdx, true),
+                Arguments.of(moduleIdx, moduleIdw, false),
+                Arguments.of(moduleIdx, "data", false),
+                Arguments.of(moduleIdx, null, false)
+            );
     }
 
-    @DataProvider(name = "moduleFilterTestData")
-    public static Object[][] getModuleFilterTestData() {
-        return new Object[][] {
-            {
-                new HashSet<>(Arrays.asList(
-                    new ModuleId("CONTROLLER","urn:TBD:params:xml:ns:yang:network-topology", "network-topology",
+    static Stream<Arguments> moduleFilterTestData() {
+        return Stream.of(
+            Arguments.of(
+                new HashSet<>(List.of(
+                    new ModuleId("CONTROLLER", "urn:TBD:params:xml:ns:yang:network-topology", "network-topology",
                             "2013-10-21"))),
-                new HashSet<>(Arrays.asList("network-topology", "ietf-inet-types"))
-            },
-            {
-                new HashSet<>(Arrays.asList(
+                new HashSet<>(List.of("network-topology", "ietf-inet-types"))
+            ),
+            Arguments.of(
+                new HashSet<>(List.of(
                     new ModuleId("CONTROLLER", "urn:ietf:params:xml:ns:yang:ietf-yang-types", "ietf-yang-types",
                             "2013-07-15"))),
-                new HashSet<>(Arrays.asList("ietf-yang-types"))
-            },
-            {
-                new HashSet<>(Arrays.asList(
+                new HashSet<>(List.of("ietf-yang-types"))
+            ),
+            Arguments.of(
+                new HashSet<>(List.of(
                     new ModuleId("urn:ietf:params:xml:ns:yang:ietf-inet-types", "ietf-inet-types", "2013-07-15"))),
-                new HashSet<>(Arrays.asList("ietf-inet-types"))
-            },
-        };
+                new HashSet<>(List.of("ietf-inet-types"))
+            )
+        );
     }
 
-    @DataProvider(name = "moduleIdStringInits")
-    public static Object[][] gatModuleIdStringInits() {
-        return new Object[][] {
+    static Stream<Arguments> moduleIdStringInits() {
+        return Stream.of(
                 //valid inits
-                {TEST_NAMESPACE, TEST_NAME, TEST_REVISION, true},
-                {"", TEST_NAME, TEST_REVISION, true},
-                {TEST_NAMESPACE, TEST_NAME, null, true},
+            Arguments.of(TEST_NAMESPACE, TEST_NAME, TEST_REVISION, true),
+            Arguments.of("", TEST_NAME, TEST_REVISION, true),
+            Arguments.of(TEST_NAMESPACE, TEST_NAME, null, true),
 
                 //invalid inits
-                {TEST_NAMESPACE, TEST_NAME, "", false},
-                {null, TEST_NAME, TEST_REVISION, false},
-                {TEST_NAMESPACE, null, TEST_REVISION, false},
-                {TEST_NAMESPACE, "", TEST_REVISION, false},
-        };
+            Arguments.of(TEST_NAMESPACE, TEST_NAME, "", false),
+            Arguments.of(null, TEST_NAME, TEST_REVISION, false),
+            Arguments.of(TEST_NAMESPACE, null, TEST_REVISION, false),
+            Arguments.of(TEST_NAMESPACE, "", TEST_REVISION, false)
+        );
     }
 
-    @Test(dataProvider = "equalsTestData")
-    public void moduleIdEqualsTest(final ModuleId moduleId, final Object other, final boolean expectedResult) {
-        Assert.assertTrue(moduleId.equals(other) == expectedResult);
+    @ParameterizedTest
+    @MethodSource("equalsTestData")
+    void moduleIdEqualsTest(ModuleId moduleId, Object other, boolean expectedResult) {
+        assertEquals(expectedResult, moduleId.equals(other));
         if (other != null) {
-            Assert.assertTrue(moduleId.hashCode() == other.hashCode() == expectedResult);
+            assertTrue(moduleId.hashCode() == other.hashCode() == expectedResult);
         } else {
-            Assert.assertFalse(expectedResult);
+            assertFalse(expectedResult);
         }
     }
 
-    @Test(dataProvider = "moduleIdStringInits")
+    @ParameterizedTest
+    @MethodSource("moduleIdStringInits")
     @SuppressWarnings("checkstyle:illegalCatch")
-    public void testCreateInvalidModuleIdsFromStrings(final String namespace, final String name, final String revision,
-            final boolean expected) {
+    void testCreateInvalidModuleIdsFromStrings(String namespace, String name, String revision, boolean expected) {
         try {
             ModuleId testModule = ModuleId.from(namespace, name, revision);
-            Assert.assertTrue(testModule.getQName().equals(QName.create(namespace, revision, name)) == expected);
+            assertEquals(expected, testModule.getQName().equals(QName.create(namespace, revision, name)) == expected);
         } catch (Exception e) {
-            Assert.assertTrue(expected == false);
+            assertFalse(expected);
         }
     }
 
@@ -132,19 +129,19 @@ public class YangModelUtilsTests {
      * org.opendaylight.mdsal.model/ietf-topology
      */
     @Test
-    public void testLoadAllModules() {
+    void testLoadAllModules() {
         List<String> expectedModuleNames = new ArrayList<>();
         expectedModuleNames.add("network-topology");
         expectedModuleNames.add("ietf-yang-types");
         expectedModuleNames.add("ietf-inet-types");
 
         Set<YangModuleInfo> allModelsFromClasspath = YangModuleUtils.getAllModelsFromClasspath();
-        Assert.assertNotNull(allModelsFromClasspath);
+        assertNotNull(allModelsFromClasspath);
         for (String expectedModuleName : expectedModuleNames) {
             long foundModelCount = allModelsFromClasspath.stream()
                     .filter(m -> m.getName().getLocalName().equals(expectedModuleName))
                     .count();
-            Assert.assertTrue(foundModelCount > 0, expectedModuleName + " not found !");
+            assertTrue(foundModelCount > 0, expectedModuleName + " not found !");
         }
     }
 
@@ -152,14 +149,15 @@ public class YangModelUtilsTests {
      * This test requires test dependency:
      * org.opendaylight.mdsal.model/ietf-topology
      */
-    @Test(dataProvider = "moduleFilterTestData")
-    public void testLoadFilteredModules(final Set<ModuleId> filter, final Set<String> expectedModuleNames) {
+    @ParameterizedTest
+    @MethodSource("moduleFilterTestData")
+    void testLoadFilteredModules(Set<ModuleId> filter, Set<String> expectedModuleNames) {
         Set<YangModuleInfo> filteredModelsFromClasspath = YangModuleUtils.getModelsFromClasspath(filter);
         for (String expectedModuleName : expectedModuleNames) {
             long foundModelCount = filteredModelsFromClasspath.stream()
                     .filter(m -> m.getName().getLocalName().equals(expectedModuleName))
                     .count();
-            Assert.assertTrue(foundModelCount > 0, expectedModuleName + " not found !");
+            assertTrue(foundModelCount > 0, expectedModuleName + " not found !");
         }
     }
 
@@ -168,9 +166,9 @@ public class YangModelUtilsTests {
      * org.opendaylight.mdsal.binding.model.iana/iana-if-type
      */
     @Test
-    public void testGenerateJSONModelSetConfiguration() {
+    void testGenerateJSONModelSetConfiguration() {
         ArrayNode arrayNode = YangModuleUtils.generateJSONModelSetConfiguration(YANG_MODELS);
-        Assert.assertNotNull(arrayNode);
-        Assert.assertTrue(arrayNode.size() == 3);
+        assertNotNull(arrayNode);
+        assertEquals(3, arrayNode.size());
     }
 }
